# Risk_loan_defaulter

./: Loan_data.ipynb  Loan_data_EDA.ipynb  loan_app.py  main.py  pyproject.toml  requirement.txt  streamlit_app.py
