[project]
name = "loan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imblearn>=0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "xgboost>=3.2.0",
]
